; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs.c_myspiffs_format.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs.c_myspiffs_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }

@fs = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Formatting: size 0x%x, addr 0x%x\0A\00", align 1
@erase_cnt = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @myspiffs_format() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @SPIFFS_unmount(%struct.TYPE_6__* @fs)
  %3 = load i32, i32* @TRUE, align 4
  %4 = call i32 @myspiffs_mount(i32 %3)
  %5 = call i32 @SPIFFS_unmount(%struct.TYPE_6__* @fs)
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs, i32 0, i32 0, i32 1), align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs, i32 0, i32 0, i32 0), align 4
  %8 = call i32 @NODE_DBG(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %7)
  store i32 0, i32* @erase_cnt, align 4
  %9 = call i32 @SPIFFS_format(%struct.TYPE_6__* @fs)
  store i32 %9, i32* %1, align 4
  store i32 -1, i32* @erase_cnt, align 4
  %10 = load i32, i32* %1, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %0
  br label %16

13:                                               ; preds = %0
  %14 = load i32, i32* @FALSE, align 4
  %15 = call i32 @myspiffs_mount(i32 %14)
  br label %16

16:                                               ; preds = %13, %12
  %17 = phi i32 [ 0, %12 ], [ %15, %13 ]
  ret i32 %17
}

declare dso_local i32 @SPIFFS_unmount(%struct.TYPE_6__*) #1

declare dso_local i32 @myspiffs_mount(i32) #1

declare dso_local i32 @NODE_DBG(i8*, i32, i32) #1

declare dso_local i32 @SPIFFS_format(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
